[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-limiter>=4.1.1",
    "google-genai>=1.72.0",
    "google-generativeai>=0.8.6",
    "openai>=2.31.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sift-stack-py>=0.13.0",
    "werkzeug>=3.1.8",
]
